--- a/conda-espet_39.yaml
+++ b/conda-espet_39.yaml
@@ -2,130 +2,17 @@ name: espet_39
 channels:
   - defaults
 dependencies:
-  - argon2-cffi=21.3.0
-  - argon2-cffi-bindings=21.2.0
-  - asttokens=2.0.5
-  - attrs=21.4.0
-  - backcall=0.2.0
-  - beautifulsoup4=4.11.1
-  - blas=1.0
-  - bleach=4.1.0
-  - brotli=1.0.9
-  - ca-certificates=2022.4.26
-  - certifi=2022.5.18.1
-  - cffi=1.15.0
-  - colorama=0.4.4
-  - cycler=0.11.0
-  - debugpy=1.5.1
-  - decorator=5.1.1
-  - defusedxml=0.7.1
-  - entrypoints=0.4
-  - executing=0.8.3
-  - fonttools=4.25.0
-  - freetype=2.10.4
-  - icc_rt=2019.0.0
-  - icu=58.2
-  - intel-openmp=2021.4.0
-  - ipykernel=6.9.1
-  - ipython=8.3.0
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.6.5
-  - jedi=0.18.1
-  - jinja2=3.0.3
-  - jpeg=9e
-  - jsonschema=4.4.0
-  - jupyter=1.0.0
-  - jupyter_client=7.2.2
-  - jupyter_console=6.4.3
-  - jupyter_core=4.10.0
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_widgets=1.0.0
-  - kiwisolver=1.4.2
-  - libpng=1.6.37
-  - libprotobuf=3.19.1
-  - libtiff=4.2.0
-  - libwebp=1.2.2
-  - lz4-c=1.9.3
-  - markupsafe=2.1.1
-  - matplotlib=3.5.1
-  - matplotlib-base=3.5.1
-  - matplotlib-inline=0.1.2
-  - mistune=0.8.4
-  - mkl=2021.4.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.1
-  - mkl_random=1.2.2
-  - munkres=1.1.4
-  - nbclient=0.5.13
-  - nbconvert=6.4.4
-  - nbformat=5.3.0
-  - nest-asyncio=1.5.5
-  - notebook=6.4.11
+  - jupyter
+  - matplotlib
+  - notebook
   - numpy=1.22.3
-  - numpy-base=1.22.3
-  - onnx=1.10.2
-  - openssl=1.1.1o
-  - packaging=21.3
-  - pandocfilters=1.5.0
-  - parso=0.8.3
-  - pickleshare=0.7.5
-  - pillow=9.0.1
-  - pip=21.2.4
-  - prometheus_client=0.13.1
-  - prompt-toolkit=3.0.20
-  - prompt_toolkit=3.0.20
-  - protobuf=3.19.1
-  - pure_eval=0.2.2
-  - pycparser=2.21
-  - pygments=2.11.2
-  - pyparsing=3.0.4
-  - pyqt=5.9.2
-  - pyrsistent=0.18.0
+  - onnx
+  - pip
   - python=3.9.12
-  - python-dateutil=2.8.2
-  - python-fastjsonschema=2.15.1
-  - pywin32=302
-  - pywinpty=2.0.2
-  - pyzmq=22.3.0
-  - qt=5.9.7
-  - qtconsole=5.3.0
-  - qtpy=2.0.1
   - scipy=1.7.3
-  - send2trash=1.8.0
-  - setuptools=61.2.0
-  - sip=4.19.13
-  - six=1.16.0
-  - soupsieve=2.3.1
-  - sqlite=3.38.3
-  - stack_data=0.2.0
-  - terminado=0.13.1
-  - testpath=0.5.0
-  - tk=8.6.12
-  - tornado=6.1
-  - traitlets=5.1.1
-  - typing-extensions=4.1.1
-  - typing_extensions=4.1.1
-  - tzdata=2022a
-  - vc=14.2
-  - vs2015_runtime=14.27.29016
-  - wcwidth=0.2.5
-  - webencodings=0.5.1
-  - wheel=0.37.1
-  - widgetsnbextension=3.5.2
-  - wincertstore=0.2
-  - winpty=0.4.3
-  - xz=5.2.5
-  - zlib=1.2.12
-  - zstd=1.5.2
+  - joblib
   - pip:
-    - dill==0.3.5.1
-    - flatbuffers==2.0
-    - multiprocess==0.70.13
-    - onnxruntime==1.11.1
-    - pandas==1.4.2
-    - pathos==0.2.9
-    - pox==0.3.1
-    - ppft==1.7.6.5
-    - pytz==2022.1
-    - salib==1.4.5
+      - onnxruntime
+      - pandas
+      - salib
 prefix: C:\Users\eckel\anaconda3\envs\espet_39
